fix people tiles on ie11

--- a/site/pages/meet-our-team/team-slice/badger-profile/style.css
+++ b/site/pages/meet-our-team/team-slice/badger-profile/style.css
@@ -64,13 +64,15 @@
 }
 
 .arrow svg {
-  position: relative;
+  position: absolute;
+  overflow: hidden;
   top: 5px;
   height: 20px;
   padding-left: 10px;
 }
 
 .lastName {
+  position: relative;
   display: inline-block;
 }
 
